[gd_scene load_steps=5 format=2]

[ext_resource path="res://image/duck.png" type="Texture" id=1]
[ext_resource path="res://scene/Duck.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "standing",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 66.0076

[node name="Duck" type="Node2D"]
z_index = 1
script = ExtResource( 2 )

[node name="DuckAnim" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "standing"

[node name="DuckQuack" type="AudioStreamPlayer" parent="."]

[node name="DuckArea2D" type="Area2D" parent="."]

[node name="DuckColli2D" type="CollisionShape2D" parent="DuckArea2D"]
shape = SubResource( 2 )

[node name="DuckDirCD" type="Timer" parent="."]

[connection signal="area_entered" from="DuckArea2D" to="." method="_on_DuckArea2D_area_entered"]
[connection signal="timeout" from="DuckDirCD" to="." method="_on_DuckDirCD_timeout"]
